<resources>
    <string name="app_name">Edu Lite</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account, Sign up</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_login">Already have an account, Login</string>
    <string name="your_name">Your name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="verify">Verify</string>
    <string name="create_new_password">Create new password</string>
    <string name="create">Create</string>
    <string name="new_password">New password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="today_s_progress">Today\'s Progress</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="daily_quests">Daily Quests</string>
    <string name="finish_5_problems">Finish 5 problems</string>
    <string name="streak">Streak</string>
    <string name="start_today_s_journey">Start Today’s Journey</string>
    <string name="completed">completed</string>
    <string name="completed_1">Completed</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="later">Later</string>
    <string name="class_overview">Class Overview</string>
    <string name="weekly_digest">Weekly Digest</string>
    <string name="unit_mastery">Unit Mastery</string>
    <string name="roaster_snapshot">Roaster Snapshot</string>
    <string name="time_on_task_min">Time on Task (min)</string>
    <string name="badges_earned">Badges earned</string>
    <string name="reflection_highlight">Reflection Highlight</string>
    <string name="i_was_the_risk_taker_by_trying_the_hard_windmill_challenge_twice">“I was the risk taker by trying the hard windmill challenge twice.”</string>
    <string name="what_s_next">What’s next</string>
    <string name="book_teacher_chat">Book Teacher Chat</string>
    <string name="download_home_pack">Download Home Pack</string>
    <string name="choose_your_grade">Choose Your Grade</string>
    <string name="today_s_theme">Today’s theme</string>
    <string name="who_we_are_me_as_a_learner">Who We Are - Me as a Learner</string>
    <string name="start_mission">Start Mission</string>
    <string name="pick_a_subject">Pick a subject</string>
    <string name="let_s_play_amp_learn"><![CDATA[Let\'s Play & Learn!]]></string>
    <string name="featured_quizzes">Featured Quizzes</string>
    <string name="practice_test">Practice Test</string>
    <string name="video_lessons">Video Lessons</string>
    <string name="creative_projects">Creative Projects</string>
    <string name="how_well_do_you_know_geometry">How Well Do You Know</string>
    <string name="test_your_knowledge_of_the_decade_of_big_hair_neon_colors_and_synthesizers">Test your knowledge of the decade of big hair, neon colors, and synthesizers!</string>
    <string name="introduction_to_machine_learning">Introduction to Machine\nLearning</string>
    <string name="join_our_expert_instructor_as_they_demystify_the_basics_of_ai_and_machine_learning">Join our expert instructor as they demystify the\nbasics of AI and machine learning.</string>
    <string name="watch_now">Watch Now</string>
    <string name="watch_now_start">Let’s Start</string>
    <string name="watch_now_resume">Resume</string>
    <string name="watch_now_completed">Completed</string>
    <string name="have_a_project_to_share">Have a project to share ?</string>
    <string name="showcase_your_creativity">Showcase your creativity</string>
    <string name="my_lego_castle">My LEGO Castle</string>
    <string name="your_downloads">Your Downloads</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="notifications">Notifications</string>
    <string name="subscription">Subscription</string>
    <string name="features">Features</string>
    <string name="unlimited_learning_access">Unlimited Learning Access</string>
    <string name="multilingual_amp_accessible"><![CDATA[Multilingual & Accessible]]></string>
    <string name="interactive_quizzes_amp_progress_tracking"><![CDATA[Interactive Quizzes & Progress Tracking]]></string>
    <string name="subscribe">Subscribe</string>
    <string name="restore">Restore</string>
    <string name="previous">Previous</string>


    <string name="logout">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_to_delete_account">Are you sure you want to delete\nthis account?</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>


    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_date_of_birth">Please enter date of birth</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="select_country">Select Country</string>
    <string name="search_here">Search here</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="early_grades">Early Grades</string>
    <string name="daily_team_quests">Daily Team Quests</string>
    <string name="add_creative_project">Add Creative Project</string>
    <string name="add">Add</string>
    <string name="badges">Badges</string>
    <string name="rewards">Rewards</string>
    <string name="no_quizzes_here_yet">No quizzes here yet</string>
    <string name="no_video_here_yet">No video here yet</string>
    <string name="no_practice_here_yet">No practice test here yet</string>
    <string name="_10_xp">+10 XP</string>
    <string name="great_job">Great Job!</string>
    <string name="you_nailed_it_that_s_the_correct_answer">You nailed it! That’s the correct answer</string>
    <string name="xp">XP</string>
    <string name="tokens">Tokens</string>
    <string name="level_up_ready">Level Up Ready!</string>
    <string name="claim">Claim</string>
    <string name="you_have_been_scored">You have been scored</string>
    <string name="ques">Ques</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="milestone_reward">Milestone Reward</string>
    <string name="missed_it">Missed It</string>
    <string name="almost_there_don_t_give_up_you_can_ntry_again">Almost there! Don’t give up — you can\ntry again.</string>
    <string name="try_again">Try Again</string>
    <string name="get_a_hint_10_xp">Get a Hint (-10 XP)</string>
    <string name="camera">Camera</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="student_preview">Student Preview</string>
    <string name="teacher_dashboard">Teacher Dashboard</string>
    <string name="parent_digest">Parent Digest</string>
    <string name="photograph_builder">Photograph Builder</string>
    <string name="food_chains">Food Chains</string>
    <string name="inquirer">Inquirer</string>
    <string name="solve_5_math_problems">Solve 5 math problems</string>
    <string name="read_10_minutes">Read 10 minutes</string>
    <string name="practice_spelling_3_words">Practice spelling (3 words)</string>
    <string name="all">All</string>
    <string name="news">New</string>
    <string name="in_progress">In Progress</string>
    <string name="nebula_theme">Nebula Theme</string>
    <string name="pixel_background">Pixel Background</string>
    <string name="gold_avatar_frame">Gold Avatar\nFrame</string>
    <string name="diamond_profile_icon">Diamond Profile\nIcon</string>
    <string name="theme">Theme</string>
    <string name="avatar">Avatar</string>
    <string name="mastered_fractions">Mastered\nFractions</string>
    <string name="completed_all_fractions_units">Completed all Fractions\nunits.</string>
    <string name="persistence_i_fractions">Persistence I\nFractions</string>
    <string name="used_3_retry_tokens_in_one_lesson">Used 3 Retry Tokens in\none lesson.</string>
    <string name="calculus_conqueror">Calculus Conqueror</string>
    <string name="completed_all_calculus_lessons">Completed all Calculus\nlessons.</string>
    <string name="first_try_ace">First Try Ace</string>
    <string name="scored_100_on_a_hard_problem">Scored 100% on a Hard\nproblem.</string>
    <string name="_7_day_streak">7-Day Streak</string>
    <string name="logged_in_for_a_full_week">Logged in for a full\nweek.</string>
    <string name="resilient_learner">Resilient Learner</string>
    <string name="completed_5_tasks_after_initial_failure">Completed 5 tasks after\ninitial failure.</string>
    <string name="sat_math_section_practice">SAT Math Section Practice</string>
    <string name="by_jane_doe">By Jane Doe</string>
    <string name="_25_min">25 min</string>
    <string name="notification">Notification</string>
    <string name="downloads">Downloads</string>
    <string name="faq">FAQ</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_up">Sign up</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="fun_quizzes">Fun Quizzes</string>
    <string name="submit">Submit</string>
    <string name="please_select_an_answer_before_proceeding">Please select an answer before proceeding</string>
    <string name="choose_grade">Choose Grade</string>
    <string name="change_theme">Change Theme</string>
    <string name="are_you_sure_to_change_app_theme">Are you sure to change app theme ?</string>
    <string name="selected_grade">Selected Grade :</string>
    <string name="no_daily_quest_found">No daily quest found</string>

</resources>