<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.edu.lite.ui.auth.AuthCommonVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginFragment">

        <include
            android:id="@+id/clHeader"
            layout="@layout/header_item_layout" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clHeader"
            app:layout_constraintVertical_bias="1.0">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                style="@style/TextView.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:onClick="@{v->vm.onClick(v)}"
                android:text="@string/login"
                android:textColor="@color/start_color"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/et_bg"
                android:nextFocusForward="@+id/etPassword"
                android:imeOptions="actionNext"
                android:gravity="start"
                android:hint="@string/your_email"
                android:onClick="@{v->vm.onClick(v)}"
                android:paddingVertical="@dimen/_14sdp"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_38sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEmail"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:src="@drawable/email"
                app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toTopOf="@+id/etEmail" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/et_bg"
                android:gravity="start"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/_14sdp"
                android:paddingStart="@dimen/_38sdp"
                android:paddingEnd="@dimen/_42sdp"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPassword"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:src="@drawable/password"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toTopOf="@+id/etPassword" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivHidePassword"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:onClick="@{v->vm.onClick(v)}"
                android:padding="@dimen/_5sdp"
                android:tint="@color/start_color"
                android:src="@drawable/hide_password"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintTop_toTopOf="@+id/etPassword" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgot"
                style="@style/TextView.semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:onClick="@{v->vm.onClick(v)}"
                android:text="@string/forgot_password"
                android:textColor="@color/start_color"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLogin"
                style="@style/TextView.semibold"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="@dimen/_42sdp"
                android:background="@drawable/gradient_btn_bg"
                android:gravity="center"
                android:onClick="@{v->vm.onClick(v)}"
                android:text="@string/login"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvForgot" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignup"
            style="@style/TextView.regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>